--- a/apalevich.pro.conf
+++ b/apalevich.pro.conf
@@ -1,16 +1,33 @@
 server {
     listen 80;
     listen [::]:80;
-
     server_name apalevich.pro www.apalevich.pro;
 
-    return 301 https://$host$request_uri; # Redirect HTTP to HTTPS
+    # Only redirect to HTTPS if the request didn't come from HTTPS
+    if ($http_x_forwarded_proto != "https") {
+        return 301 https://$host$request_uri; # Redirect HTTP to HTTPS
+    }
+
+    # Set the root directory for the website
+    root /var/www/apalevich.pro/dist;
+    index index.html;
+    error_page 404 404.html;
+
+    # SSL configuration
+    ssl_certificate /etc/letsencrypt/live/apalevich.pro/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/apalevich.pro/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/apalevich.pro/chain.pem;
+
+    include snippets/ssl-params.conf;
+
+    location / {
+        try_files $uri $uri.html $uri/ =404; # Serve files or return 404 if not found
+    }
 }
 
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-
     server_name www.apalevich.pro;
     return 301 https://apalevich.pro$request_uri;
 
@@ -24,10 +41,8 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-
     server_name apalevich.pro;
-
-    # Set the root directory for the website
+    
     root /var/www/apalevich.pro/dist;
     index index.html;
     error_page 404 404.html;
