--- a/infrastructure/apalevich.pro.conf
+++ b/infrastructure/apalevich.pro.conf
@@ -45,7 +45,7 @@ server {
     
     root /var/www/apalevich.pro/dist;
     index index.html;
-    error_page 404 404.html;
+    error_page 404 /404.html;
 
     # SSL configuration
     ssl_certificate /etc/letsencrypt/live/apalevich.pro/fullchain.pem;
@@ -53,6 +53,13 @@ server {
     ssl_trusted_certificate /etc/letsencrypt/live/apalevich.pro/chain.pem;
 
     include snippets/ssl-params.conf;
+
+    location ~* \.(woff|woff2|ttf|otf|eot)$ {
+        expires 1M;
+        access_log off;
+        add_header Cache-Control "public";
+        try_files $uri =404;
+    }
 
     location / {
         try_files $uri $uri.html $uri/ =404; # Serve files or return 404 if not found
