--- a/infrastructure/apalevich.pro.conf
+++ b/infrastructure/apalevich.pro.conf
@@ -64,4 +64,8 @@ server {
     location / {
         try_files $uri $uri.html $uri/ =404; # Serve files or return 404 if not found
     }
+
+    location /qr {
+        return 301 https://apalevich.pro/; # Redirect /qr to homepage
+    }
 }
