Update QR redirect from apalevich.pro to apalevich.com

--- a/infrastructure/apalevich.pro.conf
+++ b/infrastructure/apalevich.pro.conf
@@ -66,6 +66,6 @@ server {
     }
 
     location /qr {
-        return 301 https://apalevich.pro/; # Redirect /qr to homepage
+        return 301 https://apalevich.com/; # Redirect /qr to homepage
     }
 }
