--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"type": "module",
 	"version": "2.2.0",
 	"private": true,
+	"packageManager": "npm@11.10.1",
 	"scripts": {
+		"preinstall": "npx only-allow npm",
 		"dev": "astro dev",
 		"start": "astro dev",
 		"build": "astro build",
@@ -11,16 +13,16 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/mdx": "^3.0.1",
-		"@astrojs/sitemap": "^3.1.5",
-		"@astrojs/tailwind": "^5.1.0",
+		"@astrojs/mdx": "^4.3.13",
+		"@astrojs/sitemap": "^3.7.0",
+		"@astrojs/tailwind": "^6.0.2",
 		"@fontsource-variable/bricolage-grotesque": "^5.0.6",
 		"@fontsource-variable/inter": "^5.0.18",
 		"@iconify-json/bx": "^1.1.10",
 		"@iconify-json/simple-icons": "^1.1.102",
 		"@iconify-json/uil": "^1.1.8",
 		"@tailwindcss/typography": "^0.5.13",
-		"astro": "^4.8.7",
+		"astro": "^5.17.3",
 		"astro-icon": "^1.1.0",
 		"astro-navbar": "^2.3.2",
 		"astro-seo": "^0.8.4",
