--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-	"name": "astroship",
-	"type": "module",
-	"version": "2.2.0",
-	"private": true,
-	"packageManager": "npm@11.10.1",
-	"scripts": {
-		"preinstall": "npx only-allow npm",
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview",
-		"astro": "astro"
-	},
-	"dependencies": {
-		"@astrojs/mdx": "^4.3.13",
-		"@astrojs/sitemap": "^3.7.0",
-		"@astrojs/tailwind": "^6.0.2",
-		"@fontsource-variable/bricolage-grotesque": "^5.0.6",
-		"@fontsource-variable/inter": "^5.0.18",
-		"@iconify-json/bx": "^1.1.10",
-		"@iconify-json/simple-icons": "^1.1.102",
-		"@iconify-json/uil": "^1.1.8",
-		"@tailwindcss/typography": "^0.5.13",
-		"astro": "^5.17.3",
-		"astro-icon": "^1.1.0",
-		"astro-navbar": "^2.3.2",
-		"astro-seo": "^0.8.4",
-		"sharp": "^0.33.4",
-		"tailwindcss": "^3.4.3"
-	}
+  "name": "apalevich.pro",
+  "type": "module",
+  "version": "1.9.0",
+  "private": true,
+  "packageManager": "npm@11.10.1",
+  "scripts": {
+    "preinstall": "npx only-allow npm",
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/sitemap": "^3.7.0",
+    "@astrojs/tailwind": "^6.0.2",
+    "@fontsource-variable/bricolage-grotesque": "^5.0.6",
+    "@fontsource-variable/inter": "^5.0.18",
+    "@iconify-json/bx": "^1.1.10",
+    "@iconify-json/simple-icons": "^1.1.102",
+    "@iconify-json/uil": "^1.1.8",
+    "@tailwindcss/typography": "^0.5.13",
+    "astro": "^5.17.3",
+    "astro-icon": "^1.1.0",
+    "astro-navbar": "^2.3.2",
+    "astro-seo": "^0.8.4",
+    "sharp": "^0.33.4",
+    "tailwindcss": "^3.4.3"
+  }
 }
